---
source: crates/stepflow-main/tests/commands/test_test.rs
info:
  program: stepflow
  args:
    - "--log-file=/dev/null"
    - "--omit-stack-trace"
    - test
    - nonexistent_path
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Missing file: nonexistent_path
